terraform-kubernetes-deployments-core/manifests/dex/2.35.3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: ${ dex_ingress_class_name }
  tls:
  - hosts:
      - ${ dex_hostname }
    secretName: dex-cert
  rules:
  - host: ${ dex_hostname }
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dex
            port:
              name: dex
