terraform-kubernetes-deployments-core/manifests/dex/2.35.3/manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector:
    app: dex
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
  namespace: dex
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
        rule.${platform_domain}/allow-egress-api-server: "true"
        rule.${platform_domain}/allow-egress-vault: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: dex
            topologyKey: kubernetes.io/hostname
      containers:
      - command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/cfg/config.yaml
        image: ghcr.io/dexidp/dex:v2.35.3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5556
            scheme: HTTP
        name: dex
        ports:
        - containerPort: 5556
          name: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5556
            scheme: HTTP
        resources:
          limits:
            cpu: 50m
            memory: 32Mi
          requests:
            cpu: 50m
            memory: 16Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - mountPath: /etc/dex/cfg
          name: config
        - mountPath: /etc/dex/tls
          name: tls
        - mountPath: /etc/ssl/certs/
          name: vault-ca
      serviceAccountName: dex
      volumes:
      - configMap:
          items:
          - key: config.yaml
            path: config.yaml
          name: dex
        name: config
      - name: tls
        secret:
          secretName: dex-cert
      - name: vault-ca
        secret:
          secretName: vault-ca
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: dex
  namespace: dex
spec:
  ingressClassName: ${ dex_ingress_class_name }
  rules:
  - host: ${ dex_hostname }
    http:
      paths:
      - backend:
          service:
            name: dex
            port:
              name: dex
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ${ dex_hostname }
    secretName: dex-cert
